--- a/src/App.css
+++ b/src/App.css
@@ -186,7 +186,7 @@ footer p {
 }
 
 .articulos {
-    width: 25rem; 
+    width: 22rem; 
     height: 40rem; 
     display: flex;
     flex-direction: column;
@@ -338,8 +338,8 @@ footer p {
     text-align: center;
 }
 
-/* Responsive Degign 800 - 1200 px */
-@media (min-width: 751px) and (max-width: 1200px) {
+/* Responsive Degign 651 - 1200 px */
+@media (min-width: 651px) and (max-width: 1200px) {
     .itemList-section {
         padding:2rem 2rem;
     }
@@ -348,19 +348,27 @@ footer p {
         grid-template-columns: repeat(2,1fr);
     }
 
+    .articulos {
+        width: 22rem; 
+    }
+
     .nav-line2-text {
         font-size:1.2rem;
     }
 }
 
-/* Responsive Degign 1201 - 1400 px*/
-@media (min-width: 1201px) and (max-width: 1400px) {
+/* Responsive Degign 1201 - 1300 px*/
+@media (min-width: 1201px) and (max-width: 1300px) {
     .itemList-section {
         padding:3rem 7rem;
     }
 
     .section-products {
         grid-template-columns: repeat(3,1fr);
+    }
+
+    .articulos {
+        width: 22rem; 
     }
 
     .nav-line2-text {
@@ -452,14 +460,18 @@ footer p {
     }
 }
 
-/* Responsive Degign 1401 px en adelante */
-@media (min-width: 1401px) {
+/* Responsive Degign 1301 px en adelante */
+@media (min-width: 1301px) {
     .itemList-section {
         padding:2rem 10rem;
     }
 
     .section-products {
         grid-template-columns: repeat(4,1fr);
+    }
+
+    .articulos {
+        width: 25rem; 
     }
 
     .nav-line2-text {
